<resources>
    <string name="app_name">Local Guru App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="local_guru_today_s_priority_tasks">Today\'s Priority Tasks</string>
    <string name="local_guru_progress">Progress</string>
    <string name="local_guru_view_all">View All</string>
    <string name="local_agent_performance_report">Performance Reports</string>
    <string name="complete">Complete</string>
    <string name="save_draft">Save Draft</string>
    <string name="submit_data">Submit Data</string>
    <string name="welcome_to">Welcome to</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="phone_number">Phone Number</string>
    <string name="local_guru">Local Guru</string>
    <string name="use_this_location">Use this Location</string>
    <string name="gallery_photos">Gallery Photos</string>
    <string name="share">Share</string>
    <string name="Update">Update</string>
    <string name="add_poi">Create POI</string>
    <string name="add_sub_poi">Add Sub POI</string>
    <string name="sub_pois">Sub POIs</string>
    <string name="select_days_and_time">Select days and time</string>
    <string name="edit_hours">Edit hours</string>
    <string name="preview">Preview</string>
    <string name="logout">Logout</string>
</resources>