<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:strokeWidth="0dp"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="@dimen/_4sdp"
        app:cardCornerRadius="0dp"

        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_logo"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:src="@drawable/app_logo"
                app:layout_constraintEnd_toStartOf="@+id/tv_app_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_app_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/local_guru"
                app:fontFamily="@font/dm_sans_bold"

                android:textSize="@dimen/_16ssp"
                android:layout_marginHorizontal="@dimen/_6sdp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                app:layout_constraintStart_toEndOf="@+id/iv_logo"
                app:layout_constraintEnd_toStartOf="@+id/ll_agent_name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/ll_agent_name"
                app:layout_constraintEnd_toStartOf="@+id/cv_profile"
                app:layout_constraintStart_toEndOf="@+id/tv_app_title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:orientation="vertical"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:singleLine="true"
                    android:id="@+id/tv_agent_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:fontFamily="@font/dm_sans_medium"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10ssp"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:singleLine="true"
                    android:id="@+id/tv_agent_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:fontFamily="@font/dm_sans_regular"

                    android:textColor="@color/colorTextSecondary"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="normal"
                    />

            </LinearLayout>





            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_profile"
                app:layout_constraintStart_toEndOf="@+id/ll_agent_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="@dimen/_20sdp"
                app:strokeWidth="@dimen/_2sdp"
                app:strokeColor="@color/white"
                app:fontFamily="@font/dm_sans_bold"
                app:cardElevation="@dimen/_4sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:singleLine="true"
                    android:id="@+id/tv_agent_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"


                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold"
                    />

            </com.google.android.material.card.MaterialCardView>




        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>


    <ScrollView
        android:clipToPadding="true"
        android:layout_below="@+id/cv_header"
    android:id="@+id/rootScroll"
        android:layout_above="@+id/ll_buttons"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:paddingBottom="@dimen/_100sdp"

        android:id="@+id/rootLayout"
        android:orientation="vertical"
        android:padding="@dimen/_16sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Dynamic fields container -->
        <LinearLayout
            android:id="@+id/containerFields"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- Gallery title -->
        <TextView
            android:id="@+id/tvImagesTitle"
            android:text="@string/gallery_photos"
            android:textStyle="bold"
            android:textSize="@dimen/_14ssp"
            android:visibility="gone"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!-- Gallery RecyclerView -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvImages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:nestedScrollingEnabled="false"
            android:overScrollMode="never"
            android:paddingTop="@dimen/_8sdp" />

        <!-- Sub POI Title -->
        <TextView
            android:id="@+id/tvSubPoiTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub_pois"
            android:textStyle="bold"
            android:fontFamily="@font/dm_sans_bold"
            android:textSize="@dimen/_14ssp"
            android:visibility="gone"
            android:layout_marginTop="@dimen/_16sdp"/>

        <!-- Sub POI container -->
        <LinearLayout
            android:id="@+id/containerSubPois"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"/>


    </LinearLayout>

</ScrollView>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:layout_marginHorizontal="@dimen/_16sdp">



            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_btn_share"
                android:layout_width="0dp"
                app:strokeWidth="0dp"
                android:layout_marginHorizontal="@dimen/_2sdp"
                app:cardCornerRadius="@dimen/_6sdp"
                app:cardBackgroundColor="@color/colorLightBlue"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="@dimen/_8sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_gravity="center"
                        android:tint="@color/colorLightBlue1"
                        app:srcCompat="@drawable/ic_share"
                        android:layout_width="@dimen/_16ssp"
                        android:layout_height="@dimen/_16sdp"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_4sdp"
                        android:text="@string/share"
                        android:textColor="@color/colorLightBlue1"
                        android:fontFamily="@font/dm_sans_bold"
                        android:textSize="@dimen/_12ssp" />


                </androidx.appcompat.widget.LinearLayoutCompat>


            </com.google.android.material.card.MaterialCardView>


            <Space
                android:layout_width="12dp"
                android:layout_height="match_parent" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_btn_submit"
                android:layout_width="0dp"
                app:strokeWidth="0dp"
                android:visibility="gone"
                android:layout_marginHorizontal="@dimen/_2sdp"
                app:cardCornerRadius="@dimen/_6sdp"
                app:cardBackgroundColor="@color/colorSkyBlue"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="@dimen/_8sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_gravity="center"
                        app:tint="@color/white"
                        android:visibility="gone"
                        android:layout_width="@dimen/_16ssp"
                        android:layout_height="@dimen/_16sdp"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_4sdp"
                        android:text="@string/Update"
                        android:textColor="@color/white"
                        android:fontFamily="@font/dm_sans_bold"

                        android:textSize="@dimen/_12ssp" />


                </androidx.appcompat.widget.LinearLayoutCompat>


            </com.google.android.material.card.MaterialCardView>


        </androidx.appcompat.widget.LinearLayoutCompat>

    </RelativeLayout>
</layout>
